Syntax highlighting cleanup - Fixes color contrast issue

--- a/_src/_includes/css/style.css
+++ b/_src/_includes/css/style.css
@@ -1041,75 +1041,56 @@ h6 a,
   width: 100%;
 }
 
-/* Generated with http://k88hudson.github.io/syntax-highlighting-theme-generator/www */
-/* http://k88hudson.github.io/react-markdocs */
-/**
+/* Made with help from: http://k88hudson.github.io/syntax-highlighting-theme-generator/
  * @author k88hudson
  *
  * Based on prism.js default theme for JavaScript, CSS and HTML
  * Based on dabblet (http://dabblet.com)
  * @author Lea Verou
  */
-/*********************************************************
-* General
-*/
 pre[class*="language-"],
 code[class*="language-"] {
   color: #2d334a;
   direction: ltr;
-  -webkit-hyphens: none;
-  -moz-hyphens: none;
-  -ms-hyphens: none;
-  hyphens: none;
-  -moz-tab-size: 4;
-  -o-tab-size: 4;
-  tab-size: 4;
-  text-shadow: none;
   text-align: left;
   white-space: pre-wrap;
   word-spacing: normal;
   word-break: normal;
+
+  -webkit-hyphens: none;
+  -moz-hyphens: none;
+  -ms-hyphens: none;
+  hyphens: none;
+
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+  tab-size: 4;
 }
-pre[class*="language-"]::selection,
-code[class*="language-"]::selection,
-pre[class*="language-"]::mozselection,
-code[class*="language-"]::mozselection {
-  background: #ffffff;
-  text-shadow: none;
-}
-@media print {
-  pre[class*="language-"],
-  code[class*="language-"] {
-    text-shadow: none;
-  }
-}
+
 pre[class*="language-"] {
   background: #e3f6f5;
-  margin: .5em 0 var(--s3);
+  margin: var(--s3) 0 0;
   overflow: auto;
   padding: 1em;
 }
+
 :not(pre) > code[class*="language-"] {
   background: #e3f6f5;
-  border-radius: .3em;
+  border-radius: 4px;
   color: #b44e3c;
-  padding: 0.1em 0.3em;
 }
-/*********************************************************
-* Tokens
-*/
-.namespace {
-  opacity: .7;
-}
+
 .token.comment,
 .token.prolog,
 .token.doctype,
 .token.cdata {
   color: #666666;
 }
+
 .token.punctuation {
   color: #666666;
 }
+
 .token.property,
 .token.tag,
 .token.boolean,
@@ -1119,6 +1100,7 @@ pre[class*="language-"] {
 .token.deleted {
   color: #b44e3c;
 }
+
 .token.selector,
 .token.attr-name,
 .token.string,
@@ -1127,27 +1109,31 @@ pre[class*="language-"] {
 .token.inserted {
   color: #527a00;
 }
+
 .token.operator,
 .token.entity,
 .token.url,
 .language-css .token.string,
 .style .token.string {
-  color: #ad5c00;
-  background: #fffffe;
+  color: #b44e3c;
 }
+
 .token.atrule,
 .token.attr-value,
 .token.keyword {
   color: #0076a8;
 }
+
 .token.function {
   color: #b44e3c;
 }
+
 .token.regex,
 .token.important,
 .token.variable {
   color: #a85a00;
 }
+
 .token.important,
 .token.bold {
   font-weight: bold;
@@ -1155,31 +1141,9 @@ pre[class*="language-"] {
 .token.italic {
   font-style: italic;
 }
+
 .token.entity {
   cursor: help;
-}
-/*********************************************************
-* Line highlighting
-*/
-pre[data-line] {
-  position: relative;
-}
-pre[class*="language-"] > code[class*="language-"] {
-  position: relative;
-  z-index: 1;
-}
-.line-highlight {
-  background: #fff4b3;
-  box-shadow: inset 5px 0 0 #ffea6f;
-  left: 0;
-  line-height: inherit;
-  margin-top: 1em;
-  padding: inherit 0;
-  pointer-events: none;
-  position: absolute;
-  right: 0;
-  white-space: pre;
-  z-index: 0;
 }
 
 /* Print */
